apps/staging/linkding/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
spec:
  ingressClassName: traefik
  rules:
    # to be accessed from LAN/VPN only - DNS in CF pointing to local IP
    - host: linkding.milanoid.net # subdomain of my cloudflare domain
      http:
        paths:
          - backend:
              service:
                name: linkding
                port:
                  number: 9090
            path: /
            pathType: Prefix
